test/fail/fail_single/src/FailSingle.hx
package;

class FailSingle {
	public static function identity<T>(x:T):T {
		return null;
	}
}
